Adicionado query no Cliente Controller
